adding advance/resume logic into frontend